bynkc/tests/fixtures/negative/287_trace_outside_test/src/demo/pay.bynk
context demo.pay {
  capability Logger {
    fn log(msg: String) -> Effect[()]
  }
  provides Logger = NoOp {
    fn log(msg: String) -> Effect[()] { () }
  }
  service authorise {
    on call(amount: Int) -> Effect[Int] given Logger {
      let _ <- Logger.log("x")
      let calls = trace(Logger.log)
      calls.length()
    }
  }
}
